--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,6 +1,9 @@
 /**************************************
  * 🔷 로그인 페이지 전용 스타일
  **************************************/
+.idpwinput {
+    white-space: normal; !important;
+}
 body.login-page {
     margin: 0;
     padding: 0;
