--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <div class="login-box">
         <img src="/images/logo_login.png" alt="GGM 로고" class="logo" />
         <h1>ESS시스템</h1>
-        <form action="/login" method="post">
+        <form action="/login" method="post" class="idpwinput">
             <input type="text" name="username" placeholder="ID" required />
             <input type="password" name="password" placeholder="Password" required />
             <button type="submit">Login</button>
